# 2DGameEngine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
UI/: Button.cpp  Button.h  ImageEngine.cpp  ImageEngine.h  TextEngine.cpp  TextEngine.h
assets/scenes/: DebugScene.cpp  DebugScene.h  MenuScene.cpp  MenuScene.h
display/: Display.cpp  Display.h  Window.cpp  Window.h
input/: InputHandler.cpp  InputHandler.h
object/: AnimationComponent.h  Component.h  CreateGameObject.h  GameObject.cpp  GameObject.h  PhysicsComponent.h  TransformComponent.h
physics/: QuadTree.cpp  QuadTree.h
scene/: Scene.cpp  Scene.h  SceneBase.h  SceneManager.cpp  SceneManager.h
util/: Camera.cpp  Camera.h  EventManager.h  ResourceManager.h  Thread.cpp  Thread.h  VerifiableRandom.h  datatypes.h
